tests/expected_invalid_public_grants_private_permit.diag.out
<input>:4:36: error: public API cannot reference private type 'Access'
    public fn acquire() -> Unit grants Access {}
                                       ^^^^^^
